--- a/TOSICA.yaml
+++ b/TOSICA.yaml
@@ -1,119 +1,254 @@
-name: TOSICA
+name: tosica
 channels:
-  - pytorch
+  - http://mirrors.aliyun.com/anaconda/cloud/pytorch
+  - anaconda
   - conda-forge
-  - bioconda
-  - r
+  - http://mirrors.aliyun.com/anaconda/cloud/conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
-  - absl-py=0.13.0=pyhd8ed1ab_0
-  - aiohttp=3.7.4.post0=py38h497a2fe_0
-  - async-timeout=3.0.1=py_1000
-  - attrs=21.2.0=pyhd8ed1ab_0
-  - blas=1.0=mkl
-  - blinker=1.4=py_1
-  - brotlipy=0.7.0=py38h497a2fe_1001
+  - _openmp_mutex=4.5=2_kmp_llvm
+  - absl-py=1.4.0=pyhd8ed1ab_0
+  - aiohttp=3.8.4=py39h72bdee0_0
+  - aiosignal=1.3.1=pyhd8ed1ab_0
+  - anndata=0.9.1=pyhd8ed1ab_0
+  - arpack=3.7.0=hc6cf775_2
+  - astroid=2.11.7=py39h06a4308_0
+  - asttokens=2.2.1=pyhd8ed1ab_0
+  - async-timeout=4.0.2=pyhd8ed1ab_0
+  - attrs=22.2.0=pyh71513ae_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=pyhd8ed1ab_3
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - blinker=1.6.2=pyhd8ed1ab_0
+  - brotli=1.0.9=h166bdaf_8
+  - brotli-bin=1.0.9=h166bdaf_8
+  - brotlipy=0.7.0=py39hb9d737c_1005
   - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.17.2=h7f98852_0
-  - ca-certificates=2021.10.8=ha878542_0
-  - cachetools=4.2.2=pyhd8ed1ab_0
-  - certifi=2021.10.8=py38h578d9bd_1
-  - cffi=1.14.6=py38ha65f79e_0
-  - chardet=4.0.0=py38h578d9bd_1
-  - charset-normalizer=2.0.0=pyhd8ed1ab_0
-  - click=8.0.1=py38h578d9bd_0
-  - colorama=0.4.4=pyh9f0ad1d_0
-  - cryptography=3.4.7=py38ha5dfef3_0
-  - cudatoolkit=10.1.243=h036e899_8
-  - dataclasses=0.8=pyhc8e2a94_3
-  - einops=0.3.2=pyhd8ed1ab_0
+  - c-ares=1.18.1=h7f98852_0
+  - ca-certificates=2022.12.7=ha878542_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cachetools=5.3.0=pyhd8ed1ab_0
+  - certifi=2022.12.7=pyhd8ed1ab_0
+  - cffi=1.14.6=py39he32792d_0
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.1.3=unix_pyhd8ed1ab_2
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - comm=0.1.3=pyhd8ed1ab_0
+  - contourpy=1.0.7=py39h4b4f3f3_0
+  - cryptography=39.0.0=py39hd598818_0
+  - cudatoolkit=11.6.0=hecad31d_11
+  - cudnn=8.4.1.50=hed8a83a_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.6.7=py39h227be39_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - dill=0.3.6=py39h06a4308_0
+  - einops=0.6.1=pyhd8ed1ab_0
+  - executing=1.2.0=pyhd8ed1ab_0
+  - expat=2.5.0=hcb278e6_1
   - ffmpeg=4.3=hf484d3e_0
-  - freetype=2.10.4=h0708190_1
+  - flit-core=3.6.0=pyhd3eb1b0_0
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonttools=4.39.3=py39h72bdee0_0
+  - freetype=2.12.1=hca18f0e_1
+  - frozenlist=1.3.3=py39hb9d737c_0
+  - glib=2.69.1=h4ff587b_1
+  - glpk=5.0=h445213a_0
   - gmp=6.2.1=h58526e2_0
   - gnutls=3.6.13=h85f3911_1
-  - google-auth=1.34.0=pyh6c4a22f_0
-  - google-auth-oauthlib=0.4.1=py_2
-  - grpcio=1.38.1=py38hdd6454d_0
-  - idna=3.1=pyhd3deb0d_0
-  - importlib-metadata=4.6.4=py38h578d9bd_0
-  - intel-openmp=2021.3.0=h06a4308_3350
-  - joblib=1.0.1=pyhd8ed1ab_0
-  - jpeg=9b=h024ee3a_2
-  - lame=3.100=h7f98852_1001
-  - ld_impl_linux-64=2.36.1=hea4e1c9_2
-  - libblas=3.9.0=1_h86c2bf4_netlib
-  - libcblas=3.9.0=5_h92ddd45_netlib
-  - libffi=3.3=h58526e2_2
-  - libgcc-ng=11.1.0=hc902ee8_8
-  - libgfortran-ng=11.1.0=h69a702a_8
-  - libgfortran5=11.1.0=h6c583b3_8
-  - libgomp=11.1.0=hc902ee8_8
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=5_h92ddd45_netlib
-  - libpng=1.6.37=h21135ba_2
-  - libprotobuf=3.17.2=h780b84a_1
-  - libstdcxx-ng=11.1.0=h56837e0_8
-  - libtiff=4.2.0=h85742a9_0
-  - libuv=1.42.0=h7f98852_0
-  - libwebp-base=1.2.0=h7f98852_2
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - markdown=3.3.4=pyhd8ed1ab_0
-  - mkl=2020.2=256
-  - mkl-service=2.3.0=py38h1e0a361_2
-  - mkl_fft=1.2.0=py38hab2c0dc_1
-  - mkl_random=1.2.0=py38hc5bc63f_1
-  - multidict=5.1.0=py38h497a2fe_1
-  - ncurses=6.2=h58526e2_4
+  - google-auth=2.17.3=pyh1a96a4e_0
+  - google-auth-oauthlib=1.0.0=pyhd8ed1ab_0
+  - grpcio=1.51.1=py39h712372c_0
+  - gst-plugins-base=1.14.1=h6a678d5_1
+  - gstreamer=1.14.1=h5eee18b_1
+  - h5py=3.1.0=nompi_py39h25020de_100
+  - hdf5=1.10.6=nompi_h3c11f04_101
+  - icecream=2.1.3=pyhd8ed1ab_0
+  - icu=58.2=hf484d3e_1000
+  - idna=3.4=pyhd8ed1ab_0
+  - igraph=0.10.3=hb9ddf80_0
+  - importlib-metadata=6.6.0=pyha770c72_0
+  - importlib-resources=5.12.0=pyhd8ed1ab_0
+  - importlib_metadata=6.6.0=hd8ed1ab_0
+  - importlib_resources=5.12.0=pyhd8ed1ab_0
+  - ipykernel=6.22.0=pyh210e3f2_0
+  - ipython=8.12.0=pyh41d4057_0
+  - ipywidgets=8.0.6=pyhd8ed1ab_0
+  - isort=5.9.3=pyhd3eb1b0_0
+  - jedi=0.18.2=pyhd8ed1ab_0
+  - joblib=1.2.0=pyhd8ed1ab_0
+  - jpeg=9e=h0b41bf4_3
+  - jupyter_client=8.2.0=pyhd8ed1ab_0
+  - jupyter_core=5.3.0=py39hf3d152e_0
+  - jupyterlab_widgets=3.0.7=pyhd8ed1ab_0
+  - kiwisolver=1.4.4=py39hf939315_1
+  - krb5=1.19.4=h568e23c_0
+  - lame=3.100=h166bdaf_1003
+  - lazy-object-proxy=1.6.0=py39h27cfd23_0
+  - lcms2=2.12=hddcbb42_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - leidenalg=0.9.1=py39h227be39_0
+  - lerc=4.0.0=h27087fc_0
+  - libabseil=20220623.0=cxx17_h05df665_6
+  - libblas=3.9.0=8_openblas
+  - libbrotlicommon=1.0.9=h166bdaf_8
+  - libbrotlidec=1.0.9=h166bdaf_8
+  - libbrotlienc=1.0.9=h166bdaf_8
+  - libcblas=3.9.0=8_openblas
+  - libclang=14.0.6=default_h2e3cab8_0
+  - libclang13=14.0.6=default_h3a83d3e_0
+  - libdeflate=1.18=h0b41bf4_0
+  - libedit=3.1.20221030=h5eee18b_0
+  - libevent=2.1.12=h8f2d780_0
+  - libexpat=2.5.0=hcb278e6_1
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=12.2.0=h65d4601_19
+  - libgfortran-ng=7.5.0=h14aa051_20
+  - libgfortran4=7.5.0=h14aa051_20
+  - libgrpc=1.51.1=h05bd8bd_0
+  - libhwloc=2.9.1=hd6dc26d_0
+  - libiconv=1.17=h166bdaf_0
+  - liblapack=3.9.0=8_openblas
+  - libllvm11=11.1.0=he0ac6c6_5
+  - libllvm14=14.0.6=he0ac6c6_1
+  - libopenblas=0.3.12=pthreads_hb3c22a3_1
+  - libpng=1.6.39=h753d276_0
+  - libpq=12.9=h16c4e8d_3
+  - libprotobuf=3.21.12=h3eb15da_0
+  - libsodium=1.0.18=h36c2ea0_1
+  - libsqlite=3.40.0=h753d276_1
+  - libstdcxx-ng=12.2.0=h46fd767_19
+  - libtiff=4.2.0=hf544144_3
+  - libuuid=2.38.1=h0b41bf4_0
+  - libwebp-base=1.3.0=h0b41bf4_0
+  - libxcb=1.15=h0b41bf4_0
+  - libxkbcommon=1.0.3=he3ba5ed_0
+  - libxml2=2.10.3=hcbfbd50_0
+  - libzlib=1.2.13=h166bdaf_4
+  - llvm-openmp=16.0.2=h4dfa4b3_0
+  - llvmlite=0.39.1=py39h7d9a04d_1
+  - magma=2.5.4=hc72dce7_4
+  - markdown=3.4.3=pyhd8ed1ab_0
+  - markupsafe=2.1.2=py39h72bdee0_0
+  - matplotlib=3.7.1=py39hf3d152e_0
+  - matplotlib-base=3.7.1=py39he190548_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - mccabe=0.7.0=pyhd3eb1b0_0
+  - metis=5.1.0=h58526e2_1006
+  - mkl=2022.2.1=h84fe81f_16997
+  - mpfr=4.2.0=hb012696_0
+  - multidict=6.0.4=py39h72bdee0_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - natsort=8.3.1=pyhd8ed1ab_0
+  - nccl=2.15.5.1=h0800d71_0
+  - ncurses=6.4=h6a678d5_0
+  - nest-asyncio=1.5.6=pyhd8ed1ab_0
   - nettle=3.6=he412f7d_0
-  - ninja=1.10.2=h4bd325d_0
-  - numpy=1.19.2=py38h54aff64_0
-  - numpy-base=1.19.2=py38hfa32c7d_0
-  - oauthlib=3.1.1=pyhd8ed1ab_0
+  - networkx=3.1=pyhd8ed1ab_0
+  - ninja=1.11.1=h924138e_0
+  - nspr=4.35=h27087fc_0
+  - nss=3.89=he45b914_0
+  - numba=0.56.4=py39h71a7301_1
+  - numpy=1.23.5=py39h3d75532_0
+  - oauthlib=3.2.2=pyhd8ed1ab_0
   - olefile=0.46=pyh9f0ad1d_1
   - openh264=2.1.1=h780b84a_0
-  - openssl=1.1.1l=h7f98852_0
-  - pandas=1.3.1=py38h1abd341_0
-  - pillow=7.1.2=py38hb39fc2d_0
-  - pip=21.2.4=pyhd8ed1ab_0
-  - protobuf=3.17.2=py38h709712a_0
+  - openssl=1.1.1t=h0b41bf4_0
+  - packaging=23.1=pyhd8ed1ab_0
+  - pandas=2.0.1=py39h40cae4c_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - patsy=0.5.3=pyhd8ed1ab_0
+  - pcre=8.45=h9c3ff4c_0
+  - pexpect=4.8.0=pyh1a96a4e_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=8.1.2=py39hf95b381_0
+  - pip=23.0.1=py39h06a4308_0
+  - platformdirs=2.5.2=py39h06a4308_0
+  - prompt-toolkit=3.0.38=pyha770c72_0
+  - prompt_toolkit=3.0.38=hd8ed1ab_0
+  - protobuf=4.21.12=py39h227be39_0
+  - psutil=5.9.5=py39h72bdee0_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pyjwt=2.1.0=pyhd8ed1ab_0
-  - pyopenssl=20.0.1=pyhd8ed1ab_0
-  - pysocks=1.7.1=py38h578d9bd_3
-  - python=3.8.11=h12debd9_0_cpython
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.15.1=pyhd8ed1ab_0
+  - pyjwt=2.6.0=pyhd8ed1ab_0
+  - pylint=2.14.5=py39h06a4308_0
+  - pynndescent=0.5.10=pyh1a96a4e_0
+  - pyopenssl=23.1.1=pyhd8ed1ab_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pyqt=5.15.4=py39h5a03fae_0
+  - pyqt5-sip=12.9.0=py39h5a03fae_0
+  - pysocks=1.7.1=pyha2e5f31_6
+  - python=3.9.0=hdb3f193_2
   - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.8=2_cp38
-  - pytorch=1.7.1=py3.8_cuda10.1.243_cudnn7.6.3_0
-  - pytz=2021.1=pyhd8ed1ab_0
+  - python-igraph=0.10.4=py39hfac54ea_0
+  - python-tzdata=2023.3=pyhd8ed1ab_0
+  - python_abi=3.9=2_cp39
+  - pytorch=1.12.1=cuda112py39hb0b7ed5_201
+  - pytorch-mutex=1.0=cuda
+  - pytz=2023.3=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
-  - readline=8.1=h46c0cb4_0
-  - requests=2.26.0=pyhd8ed1ab_0
-  - requests-oauthlib=1.3.0=pyh9f0ad1d_0
-  - rsa=4.7.2=pyh44b312d_0
-  - scikit-learn=0.24.2=py38h1561384_1
-  - scipy=1.7.1=py38h56a6a73_0
-  - setuptools=49.6.0=py38h578d9bd_3
+  - pyzmq=25.0.2=py39h0be026e_0
+  - qt-main=5.15.2=h8373d8f_8
+  - re2=2022.06.01=h27087fc_1
+  - readline=8.2=h5eee18b_0
+  - requests=2.28.2=pyhd8ed1ab_1
+  - requests-oauthlib=1.3.1=pyhd8ed1ab_0
+  - rsa=4.9=pyhd8ed1ab_0
+  - scanpy=1.9.3=pyhd8ed1ab_0
+  - scikit-learn=1.2.2=py39hd189fd4_1
+  - scipy=1.5.3=py39hf3f25e7_0
+  - seaborn=0.12.2=hd8ed1ab_0
+  - seaborn-base=0.12.2=pyhd8ed1ab_0
+  - session-info=1.0.0=pyhd8ed1ab_0
+  - setuptools=66.0.0=py39h06a4308_0
+  - sip=6.5.1=py39he80948d_2
   - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.36.0=h9cd32fc_0
-  - tensorboard=2.6.0=pyhd8ed1ab_0
-  - tensorboard-data-server=0.6.0=py38h2b97feb_0
-  - tensorboard-plugin-wit=1.8.0=pyh44b312d_0
-  - threadpoolctl=2.2.0=pyh8a188c0_0
-  - tk=8.6.10=h21135ba_1
-  - torchaudio=0.7.2=py38
-  - torchvision=0.8.2=py38_cu101
-  - tqdm=4.62.1=pyhd8ed1ab_0
-  - typing-extensions=3.10.0.0=hd8ed1ab_0
-  - typing_extensions=3.10.0.0=pyha770c72_0
-  - urllib3=1.26.6=pyhd8ed1ab_0
-  - werkzeug=2.0.1=pyhd8ed1ab_0
-  - wheel=0.37.0=pyhd8ed1ab_1
-  - xz=5.2.5=h516909a_1
-  - yarl=1.6.3=py38h497a2fe_2
-  - zipp=3.5.0=pyhd8ed1ab_0
-  - zlib=1.2.11=h516909a_1010
-  - zstd=1.4.9=ha95c52a_0
+  - sleef=3.5.1=h9b69904_2
+  - sqlite=3.41.2=h5eee18b_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - statsmodels=0.13.5=py39h2ae25f5_2
+  - stdlib-list=0.8.0=pyhd8ed1ab_0
+  - suitesparse=5.10.1=h9e50725_1
+  - tbb=2021.9.0=hf52228f_0
+  - tensorboard=2.12.2=pyhd8ed1ab_0
+  - tensorboard-data-server=0.7.0=py39h52d8a92_0
+  - tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
+  - texttable=1.6.7=pyhd8ed1ab_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
+  - tk=8.6.12=h1ccaba5_0
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tomli=2.0.1=py39h06a4308_0
+  - tomlkit=0.11.1=py39h06a4308_0
+  - torchaudio=0.12.1=py39_cu116
+  - torchvision=0.13.1=py39_cu116
+  - tornado=6.3=py39h72bdee0_0
+  - tqdm=4.65.0=pyhd8ed1ab_1
+  - traitlets=5.9.0=pyhd8ed1ab_0
+  - typing-extensions=4.4.0=py39h06a4308_0
+  - typing_extensions=4.4.0=py39h06a4308_0
+  - tzdata=2023c=h04d1e81_0
+  - umap-learn=0.5.3=py39hf3d152e_0
+  - unicodedata2=15.0.0=py39hb9d737c_0
+  - urllib3=1.26.15=pyhd8ed1ab_0
+  - wcwidth=0.2.6=pyhd8ed1ab_0
+  - werkzeug=2.3.0=pyhd8ed1ab_0
+  - wheel=0.38.4=py39h06a4308_0
+  - widgetsnbextension=4.0.7=pyhd8ed1ab_0
+  - wrapt=1.14.1=py39h5eee18b_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xz=5.2.10=h5eee18b_1
+  - yarl=1.9.1=py39hd1e30aa_0
+  - zeromq=4.3.4=h9c3ff4c_1
+  - zipp=3.15.0=pyhd8ed1ab_0
+  - zlib=1.2.13=h166bdaf_4
+  - zstd=1.5.2=h3eb15da_6
+  - pip:
+      - torch-tb-profiler==0.4.1
