Fix bugs and improve performance

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,15 +44,15 @@ install_requires =
 	numba
 	scanpy>=1.8.2
 	anndata>=0.7.2
-	h5py==3.4.0
+	h5py>=3.4.0
 	scipy
 	scikit-learn
 	scikit-misc
 	louvain
 	umap-learn
-	torch==1.7.1
-	tensorboard==2.6.0
-	protobuf==3.17.2
+	torch>=1.7.1
+	tensorboard>=2.6.0
+	protobuf>=3.17.2
 	einops
 	tqdm>=4.62.1
 	pydot
